--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.1",
+    "@clerk/nextjs": "^5.2.3",
     "@prisma/client": "^5.16.2",
     "@tanstack/react-query": "^5.8.1",
     "@tanstack/react-query-devtools": "^5.8.1",
     "axios": "^1.7.2",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "openai": "^4.52.7",
     "react": "^18",
     "react-dom": "^18",
